--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1835 2025/01/08 01:56:42 wen Exp $
+# $NetBSD: Makefile,v 1.1836 2025/01/28 11:50:12 adam Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -826,6 +826,7 @@ SUBDIR+=	py-grappelli_safe
 SUBDIR+=	py-gunicorn
 SUBDIR+=	py-h11
 SUBDIR+=	py-h2
+SUBDIR+=	py-hishel
 SUBDIR+=	py-http_ece
 SUBDIR+=	py-httpbin
 SUBDIR+=	py-httpcore
