--- a/sysutils/dinit/Makefile
+++ b/sysutils/dinit/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2025/01/28 06:26:33 imil Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/29 05:13:03 imil Exp $
 
 DISTNAME=	dinit-0.19.3
+PKGREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GITHUB:=davmac314/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -15,5 +16,6 @@ USE_TOOLS+=		gmake
 HAS_CONFIGURE=		yes
 CONFIGURE_ARGS+=	--exec-prefix=${PREFIX}
 CONFIGURE_ARGS+=	--mandir=${PREFIX}/${PKGMANDIR}
+CONFIGURE_ARGS+=	--enable-shutdown
 
 .include "../../mk/bsd.pkg.mk"
