--- a/sysutils/py-ansible-compat/Makefile
+++ b/sysutils/py-ansible-compat/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.31 2024/11/20 11:45:20 adam Exp $
+# $NetBSD: Makefile,v 1.32 2025/01/29 09:29:21 adam Exp $
 
-DISTNAME=	ansible_compat-24.10.0
+DISTNAME=	ansible_compat-25.1.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	sysutils python
 MASTER_SITES=	${MASTER_SITE_PYPI:=a/ansible-compat/}
@@ -12,15 +12,16 @@ LICENSE=	mit
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=65.3.0:../../devel/py-setuptools
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=7.0.5:../../devel/py-setuptools_scm
-DEPENDS+=	ansible-core>=2.14:../../sysutils/ansible-core
+DEPENDS+=	ansible-core>=2.16:../../sysutils/ansible-core
 DEPENDS+=	${PYPKGPREFIX}-jsonschema>=4.6.0:../../textproc/py-jsonschema
 DEPENDS+=	${PYPKGPREFIX}-packaging-[0-9]*:../../devel/py-packaging
 DEPENDS+=	${PYPKGPREFIX}-subprocess-tee>=0.4.1:../../sysutils/py-subprocess-tee
 DEPENDS+=	${PYPKGPREFIX}-yaml-[0-9]*:../../textproc/py-yaml
-#TODO: TEST_DEPENDS pip-tools, pytest-plus
 TEST_DEPENDS+=	${PYPKGPREFIX}-coverage-[0-9]*:../../devel/py-coverage
 TEST_DEPENDS+=	${PYPKGPREFIX}-flaky-[0-9]*:../../devel/py-flaky
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-instafail-[0-9]*:../../devel/py-test-instafail
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-mock-[0-9]*:../../devel/py-test-mock
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-plus-[0-9]*:../../devel/py-test-plus
 
 USE_LANGUAGES=	# none
 
