--- a/textproc/groff/Makefile
+++ b/textproc/groff/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.101 2025/01/13 06:31:28 wiz Exp $
+# $NetBSD: Makefile,v 1.102 2025/01/29 10:31:53 jperkin Exp $
 
 DISTNAME=	groff-1.23.0
+PKGREVISION=	1
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_GNU:=groff/}
 
