--- a/textproc/py-xlsxwriter/Makefile
+++ b/textproc/py-xlsxwriter/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.72 2025/01/23 07:26:49 adam Exp $
+# $NetBSD: Makefile,v 1.73 2025/01/29 12:14:38 adam Exp $
 
-DISTNAME=	XlsxWriter-3.2.1
+DISTNAME=	xlsxwriter-3.2.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=X/XlsxWriter/}
@@ -9,6 +9,8 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/jmcnamara/XlsxWriter
 COMMENT=	Python module for creating Excel XLSX files
 LICENSE=	2-clause-bsd
+
+WHEEL_NAME=	${DISTNAME:S/xlsxw/XlsxW/}
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 
