--- a/textproc/tree-sitter/Makefile
+++ b/textproc/tree-sitter/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.14 2024/12/29 20:56:52 wiz Exp $
+# $NetBSD: Makefile,v 1.15 2025/01/29 13:42:31 adam Exp $
 
-DISTNAME=	tree-sitter-0.24.6
+DISTNAME=	tree-sitter-0.24.7
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_GITHUB:=tree-sitter/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -10,9 +10,8 @@ HOMEPAGE=	https://tree-sitter.github.io/
 COMMENT=	Incremental parsing system for programming tools
 LICENSE=	mit
 
-USE_TOOLS+=	gmake
-
-USE_CC_FEATURES+=	c11
+USE_CC_FEATURES=	c11
+USE_TOOLS+=		gmake
 PKGCONFIG_OVERRIDE+=	tree-sitter.pc.in
 
 .include "../../mk/bsd.pkg.mk"
