--- a/textproc/translate-toolkit/Makefile
+++ b/textproc/translate-toolkit/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.20 2025/01/23 09:43:25 adam Exp $
+# $NetBSD: Makefile,v 1.21 2025/01/29 13:49:38 adam Exp $
 
-DISTNAME=	translate_toolkit-3.14.6
+DISTNAME=	translate_toolkit-3.14.7
 PKGNAME=	${DISTNAME:S/_/-/}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=t/translate-toolkit/}
@@ -12,8 +12,8 @@ LICENSE=	gnu-gpl-v2
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=42:../../devel/py-setuptools
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=6.2:../../devel/py-setuptools_scm
+DEPENDS+=	${PYPKGPREFIX}-cwcwidth>=0.1.9:../../devel/py-cwcwidth
 DEPENDS+=	${PYPKGPREFIX}-lxml>=4.6.3:../../textproc/py-lxml
-DEPENDS+=	${PYPKGPREFIX}-wcwidth>=0.2.10:../../devel/py-wcwidth
 
 USE_LANGUAGES=	# none
 USE_TOOLS+=	bash:run
