--- a/www/php-concrete-cms/Makefile
+++ b/www/php-concrete-cms/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2025/01/19 14:10:02 taca Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/29 15:17:43 taca Exp $
 #
 
 DISTNAME=	concrete-cms-${GITHUB_RELEASE}
@@ -24,7 +24,7 @@ DEPENDS+=	${PHP_PKG_PREFIX}-pecl-mcrypt>=1.0.0:../../security/php-pecl-mcrypt
 
 SUPERSEDES+=	${PHP_PKG_PREFIX}-concrete5-[0-9]*
 
-PHP_VERSIONS_ACCEPTED=	81 82
+PHP_VERSIONS_ACCEPTED=	81 82 83
 
 # Avoid unzip's warning
 EXTRACT_OPTS_ZIP=	-qo
