--- a/devel/hs-primitive/Makefile
+++ b/devel/hs-primitive/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.20 2024/05/09 01:32:07 pho Exp $
+# $NetBSD: Makefile,v 1.21 2025/01/29 17:14:31 pho Exp $
 
 DISTNAME=	primitive-0.9.0.0
 PKGREVISION=	2
@@ -7,6 +7,9 @@ CATEGORIES=	devel
 MAINTAINER=	pho@cielonegro.org
 COMMENT=	Primitive memory-related operations
 LICENSE=	modified-bsd
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	base
 
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
