--- a/devel/hs-vector-stream/Makefile
+++ b/devel/hs-vector-stream/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2024/05/09 01:32:19 pho Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/29 17:16:03 pho Exp $
 
 DISTNAME=	vector-stream-0.1.0.1
 PKGREVISION=	1
@@ -7,6 +7,9 @@ CATEGORIES=	devel
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Efficient Streams for Haskell
 LICENSE=	modified-bsd
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	base
 
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
