--- a/devel/hs-vector/Makefile
+++ b/devel/hs-vector/Makefile
@@ -1,14 +1,19 @@
-# $NetBSD: Makefile,v 1.20 2024/05/09 01:32:19 pho Exp $
+# $NetBSD: Makefile,v 1.21 2025/01/29 17:21:33 pho Exp $
 
-DISTNAME=	vector-0.13.1.0
-PKGREVISION=	2
+DISTNAME=	vector-0.13.2.0
 CATEGORIES=	devel
 
 MAINTAINER=	pho@cielonegro.org
 COMMENT=	Efficient Arrays for Haskell
 LICENSE=	modified-bsd
 
+# lib:vector
 .include "../../devel/hs-primitive/buildlink3.mk"
 .include "../../devel/hs-vector-stream/buildlink3.mk"
+
+# lib:benchmarks-O2
+.include "../../devel/hs-random/buildlink3.mk"
+.include "../../devel/hs-tasty/buildlink3.mk"
+
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
