--- a/sysutils/hwdata/Makefile
+++ b/sysutils/hwdata/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.1 2024/12/26 18:33:23 bsiegert Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/29 17:25:01 vins Exp $
 
-DISTNAME=	hwdata-0.390
+DISTNAME=	hwdata-0.391
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GITHUB:=vcrhonek/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -11,7 +11,7 @@ COMMENT=	Hardware identification and config data
 LICENSE=	gnu-gpl-v2 OR x11
 
 HAS_CONFIGURE=	yes
-USE_TOOLS+=	gmake
+USE_TOOLS+=	gmake sed
 USE_LANGUAGES=	# none
 
 CONFIGURE_ARGS+=	--prefix=${PREFIX:Q}
@@ -19,5 +19,7 @@ CONFIGURE_ARGS+=	--datarootdir=${PREFIX:Q}/share
 CONFIGURE_ARGS+=	--disable-blacklist
 
 PKGCONFIG_OVERRIDE+=	hwdata.pc.in
+
+MAKE_FLAGS+=	PKGCONFIG_DIR=${PREFIX}/lib/pkgconfig
 
 .include "../../mk/bsd.pkg.mk"
