--- a/devel/hs-unordered-containers/Makefile
+++ b/devel/hs-unordered-containers/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2024/05/09 01:32:18 pho Exp $
+# $NetBSD: Makefile,v 1.26 2025/01/29 17:28:47 pho Exp $
 
 DISTNAME=	unordered-containers-0.2.20
 PKGREVISION=	1
@@ -7,6 +7,10 @@ CATEGORIES=	devel
 MAINTAINER=	pho@cielonegro.org
 COMMENT=	Efficient hashing-based container types
 LICENSE=	modified-bsd
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	hashable	\
+	template-haskell
 
 .include "../../devel/hs-hashable/buildlink3.mk"
 .include "../../mk/haskell.mk"
