--- a/devel/hs-these/Makefile
+++ b/devel/hs-these/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.13 2024/05/09 01:32:16 pho Exp $
+# $NetBSD: Makefile,v 1.14 2025/01/29 17:46:25 pho Exp $
 
-DISTNAME=	these-1.2
-PKGREVISION=	2
+DISTNAME=	these-1.2.1
 CATEGORIES=	devel
 
 MAINTAINER=	pho@cielonegro.org
@@ -9,8 +8,7 @@ COMMENT=	Either-or-both data type
 LICENSE=	modified-bsd
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
-	base	\
-	deepseq
+	hashable
 
 .include "../../devel/hs-assoc/buildlink3.mk"
 .include "../../devel/hs-hashable/buildlink3.mk"
