--- a/devel/py-proto-plus/Makefile
+++ b/devel/py-proto-plus/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2024/11/11 07:28:19 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/29 18:07:56 adam Exp $
 
-DISTNAME=	proto_plus-1.25.0
+DISTNAME=	proto_plus-1.26.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/proto-plus/}
