--- a/www/reader/Makefile
+++ b/www/reader/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.3 2024/09/06 18:49:01 bsiegert Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/29 21:47:40 pin Exp $
 
-DISTNAME=	reader-0.4.5
-PKGREVISION=	2
+DISTNAME=	reader-0.4.6
 CATEGORIES=	www
 MASTER_SITES=	${MASTER_SITE_GITHUB:=mrusme/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
