--- a/devel/hs-strict/Makefile
+++ b/devel/hs-strict/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.12 2024/05/09 01:32:13 pho Exp $
+# $NetBSD: Makefile,v 1.13 2025/01/30 04:25:02 pho Exp $
 
-DISTNAME=	strict-0.5
-PKGREVISION=	2
+DISTNAME=	strict-0.5.1
 CATEGORIES=	devel
 
 MAINTAINER=	pho@cielonegro.org
@@ -9,9 +8,7 @@ COMMENT=	Strict data types and String IO
 LICENSE=	modified-bsd
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
-	bytestring	\
-	deepseq		\
-	text
+	hashable
 
 .include "../../devel/hs-hashable/buildlink3.mk"
 .include "../../devel/hs-these/buildlink3.mk"
