--- a/textproc/hs-text-short/Makefile
+++ b/textproc/hs-text-short/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.14 2024/05/09 01:32:48 pho Exp $
+# $NetBSD: Makefile,v 1.15 2025/01/30 04:39:36 pho Exp $
 
-DISTNAME=	text-short-0.1.5
-PKGREVISION=	6
+DISTNAME=	text-short-0.1.6
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -9,12 +8,9 @@ COMMENT=	Memory-efficient representation of Unicode text strings
 LICENSE=	modified-bsd
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
-	base			\
-	bytestring		\
-	deepseq			\
-	ghc-prim		\
-	template-haskell	\
-	text
+	base	\
+	hashable	\
+	template-haskell
 
 .include "../../devel/hs-hashable/buildlink3.mk"
 .include "../../mk/haskell.mk"
