--- a/devel/hs-data-default-class/Makefile
+++ b/devel/hs-data-default-class/Makefile
@@ -1,12 +1,12 @@
-# $NetBSD: Makefile,v 1.10 2024/05/09 01:31:51 pho Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/30 05:20:55 pho Exp $
 
-DISTNAME=	data-default-class-0.1.2.0
-PKGREVISION=	8
+DISTNAME=	data-default-class-0.2.0.0
 CATEGORIES=	devel
 
 MAINTAINER=	szptvlfn@NetBSD.org
-COMMENT=	Class for types with a default value
+COMMENT=	Class for types with a default value (compatibility shim)
 LICENSE=	modified-bsd
 
+.include "../../devel/hs-data-default/buildlink3.mk"
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
