--- a/devel/hs-async/Makefile
+++ b/devel/hs-async/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2024/05/09 01:31:45 pho Exp $
+# $NetBSD: Makefile,v 1.15 2025/01/30 05:27:09 pho Exp $
 
 DISTNAME=	async-2.2.5
 PKGREVISION=	1
@@ -7,6 +7,10 @@ CATEGORIES=	devel
 MAINTAINER=	pho@cielonegro.org
 COMMENT=	Run IO operations asynchronously and wait for their results
 LICENSE=	modified-bsd
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	base	\
+	hashable
 
 .include "../../devel/hs-hashable/buildlink3.mk"
 .include "../../mk/haskell.mk"
