--- a/benchmarks/hs-criterion/Makefile
+++ b/benchmarks/hs-criterion/Makefile
@@ -1,16 +1,13 @@
-# $NetBSD: Makefile,v 1.3 2024/05/09 01:31:39 pho Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/30 06:57:35 pho Exp $
 
-DISTNAME=	criterion-1.6.3.0
-PKGREVISION=	2
+DISTNAME=	criterion-1.6.4.0
 CATEGORIES=	benchmarks
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Robust, reliable performance measurement and analysis
 LICENSE=	modified-bsd
 
-OPTPARSE_APPLICATIVE_EXECUTABLES+=	criterion-report
-.include "../../devel/hs-optparse-applicative/application.mk"
-
+# lib:criterion
 .include "../../converters/hs-aeson/buildlink3.mk"
 .include "../../devel/hs-base-compat-batteries/buildlink3.mk"
 .include "../../devel/hs-binary-orphans/buildlink3.mk"
@@ -28,5 +25,10 @@ OPTPARSE_APPLICATIVE_EXECUTABLES+=	criterion-report
 .include "../../devel/hs-transformers-compat/buildlink3.mk"
 .include "../../devel/hs-vector/buildlink3.mk"
 .include "../../devel/hs-vector-algorithms/buildlink3.mk"
+
+# exe:criterion-report
+OPTPARSE_APPLICATIVE_EXECUTABLES+=	criterion-report
+.include "../../devel/hs-optparse-applicative/application.mk"
+
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
