--- a/textproc/hs-attoparsec-aeson/Makefile
+++ b/textproc/hs-attoparsec-aeson/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.3 2024/05/09 01:32:39 pho Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/30 07:09:52 pho Exp $
 
-DISTNAME=	attoparsec-aeson-2.2.0.1
-PKGREVISION=	2
+DISTNAME=	attoparsec-aeson-2.2.2.0
 CATEGORIES=	textproc converters
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -10,6 +9,7 @@ LICENSE=	modified-bsd
 
 .include "../../converters/hs-aeson/buildlink3.mk"
 .include "../../textproc/hs-attoparsec/buildlink3.mk"
+.include "../../devel/hs-character-ps/buildlink3.mk"
 .include "../../math/hs-integer-conversion/buildlink3.mk"
 .include "../../devel/hs-primitive/buildlink3.mk"
 .include "../../math/hs-scientific/buildlink3.mk"
