--- a/converters/hs-base64/Makefile
+++ b/converters/hs-base64/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2024/05/09 01:31:40 pho Exp $
+# $NetBSD: Makefile,v 1.10 2025/01/30 07:13:50 pho Exp $
 
 DISTNAME=	base64-1.0
 PKGREVISION=	1
@@ -7,6 +7,9 @@ CATEGORIES=	converters
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Modern RFC 4648-compliant Base64 library
 LICENSE=	modified-bsd
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	base
 
 .include "../../textproc/hs-text-short/buildlink3.mk"
 .include "../../mk/haskell.mk"
