--- a/devel/hs-cborg/Makefile
+++ b/devel/hs-cborg/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2024/05/09 01:31:48 pho Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/30 07:19:53 pho Exp $
 
 DISTNAME=	cborg-0.2.10.0
 PKGREVISION=	1
@@ -7,6 +7,9 @@ CATEGORIES=	devel
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Concise Binary Object Representation (CBOR)
 LICENSE=	modified-bsd
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	base
 
 .include "../../devel/hs-half/buildlink3.mk"
 .include "../../devel/hs-primitive/buildlink3.mk"
