--- a/converters/hs-cborg-json/Makefile
+++ b/converters/hs-cborg-json/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2024/05/09 01:31:40 pho Exp $
+# $NetBSD: Makefile,v 1.12 2025/01/30 07:21:00 pho Exp $
 
 DISTNAME=	cborg-json-0.2.6.0
 PKGREVISION=	1
@@ -7,6 +7,9 @@ CATEGORIES=	converters
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Library for encoding JSON as CBOR
 LICENSE=	modified-bsd
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	base
 
 .include "../../converters/hs-aeson/buildlink3.mk"
 .include "../../converters/hs-aeson-pretty/buildlink3.mk"
